# pkmsg

./: .gitignore  .gitmodules  LICENSE  README.md  meson.build  meson.options  setup_example.sh  setup_meson.sh  valgrind.sh
example/: fuzz.c  main.c  messages.h  messages_def.c  messages_def.h  plugin.py  setup.sh
fuzz/: fuzz.c  messages.h  messages_def.c  messages_def.h
include/: pkmsg.h
src/: common.c  common.h  decoder.c  encoder.c  internal.c  internal.h
subprojects/cmp/: meson.build
